height fix on mobile

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -9,7 +9,7 @@
 // Full screen mixins
 
 @mixin widget-container-fs {
-  height: 100vh;
+  height: 90vh;
   margin: 0;
   max-width: none;
   width: 100%;
